# ghostline

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
crates/ghostline-cli/: Cargo.toml  build.rs
crates/ghostline-cli/src/: banner.rs  config.rs  main.rs  proxy.rs  replay.rs  viewer_assets.rs  viewer_server.rs  wizard.rs
crates/ghostline-core/: Cargo.toml
crates/ghostline-core/src/: frame.rs  lib.rs  reader.rs  writer.rs
docs/plans/: 2026-02-27-v2-implementation.md  2026-02-27-v2-single-binary-design.md
examples/: demo.ghostline  proxy-test.py
format/: SPEC.md
sdk/: README.md  pyproject.toml
sdk/ghostline/: __init__.py  context.py  export_html.py  format.py  recorder.py  replayer.py  scrub.py  search.py  wrapper.py
sdk/tests/: test_format.py  test_record_replay.py  test_scrub.py  test_search.py
viewer/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
viewer/scripts/: capture-puppeteer.mjs  screenshot.js
viewer/src/: App.tsx
viewer/src/components/: DetailPanel.tsx  DropZone.tsx  SecretsWarning.tsx  SidePanel.tsx  StatusBar.tsx  Timeline.tsx  TimelineNode.tsx  Topbar.tsx
viewer/src/hooks/: useAutoLoadRuns.ts  useLiveFrames.ts
viewer/src/lib/: parser.ts  types.ts
viewer/src/store/: useStore.ts
viewer/src/styles/: global.css  tokens.css
