[package]
name = "ghostline-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for ghostline — record, replay, inspect .ghostline files"
license = "MIT"

[[bin]]
name = "ghostline"
path = "src/main.rs"

[dependencies]
ghostline-core = { path = "../ghostline-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
