[package]
name = "ghostline-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for ghostline — record, replay, inspect .ghostline files"
license = "MIT"

[[bin]]
name = "ghostline"
path = "src/main.rs"

[dependencies]
ghostline-core = { path = "../ghostline-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
sha2 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
